--- a/WebApp/templates/index.html
+++ b/WebApp/templates/index.html
@@ -44,8 +44,8 @@
                 </select>
             </div>
             <div class="mb-3">
-                <label class="form-label">Report Type</label>
-                <select class="form-select" id="reportType">
+                <label class="form-label" style="display: none;">Report Type</label>
+                <select class="form-select" id="reportType" style="display:none;">
                     <option value="At Sea">At Sea</option>
                     <option value="Arrival">Arrival</option>
                     <option value="In Port">In Port</option>
